<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/tv_titulo" />

    <EditText
        android:id="@+id/ET_documento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:inputType="number"
        android:hint="@string/et_documento" />

    <EditText
        android:id="@+id/ET_nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/et_nombres" />

    <EditText
        android:id="@+id/ET_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:hint="@string/et_apellidos" />

    <EditText
        android:id="@+id/ET_Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/et_usuario" />

    <EditText
        android:id="@+id/ET_CONTRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/et_contra" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/BT_Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accionRegistar"
            android:layout_weight="1"
            android:text="@string/bt_registar" />

        <Button
            android:id="@+id/BT_Listar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="actualizar"
            android:text="@string/bt_actualizar" />

        <Button
            android:id="@+id/BT_eliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="accionEliminar"
            android:text="@string/bt_eliminar" />

    </TableRow>

    <ListView
        android:id="@+id/LV_lista"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>